syntax = "proto3";

package kurtome.dote.proto.api.action;

import "api/dotable.proto";
import "api/common.proto";

message AddPodcastRequest {
  string itunesUrl = 1;
  Extras extras = 2;
  // Indicates that the podcast feed should be added to the database, but not yet ingested.
  bool ingest_later = 3;

  message Extras {
    bool popular = 1;
  }
}

message AddPodcastResponse {
  api.ActionStatus response_status = 1;
  repeated api.Dotable podcasts = 2;
}